@@ -1,3 +1,6 @@
+[B]Version 4.0.7[/B]
+    -sports section updated for smartcric and crifree
+    
 [B]Version 4.0.6[/B]
     -v5 updated retry logic
 [B]Version 4.0.5[/B]
